# aksjeny2-new

./: .dockerignore  .env  .env.example  .gitignore  AUTHENTICITY_POLICY.md  COMPLETE_CLEANUP_GIT_PUSH_STATUS.md  COMPLETE_FIX_STATUS_REPORT.md  COMPLETE_SUCCESS_REPORT_ALL_ISSUES_RESOLVED.md  COMPREHENSIVE_CRITICAL_ISSUES_FIXED_FINAL_REPORT.md  COMPREHENSIVE_FIXES_VERIFICATION_REPORT.md  COMPREHENSIVE_FIX_STATUS_FINAL_REPORT.md  COMPREHENSIVE_FIX_SUMMARY.md  CONSOLIDATION_STATUS.md  CRITICAL_ISSUES_RESOLVED_29AUG2025.md  DEPLOYMENT_DIAGNOSTICS.md  DEPLOYMENT_FIX_RAPPORT.md  DEPLOYMENT_LOG.md  DIAGNOSTICS_README.md  Dockerfile  FINAL_TESTING_REPORT.md  FORUM_WARREN_BUFFETT_FIXES.md  INNOVATIVE_FEATURES_ROADMAP.md  MIGRATION_GUIDE_LANGUAGE_INDEX_AUDIT.md  Makefile  OSLO_TICKER_GRAPH_FIX.md  PORTFOLIO_500_ERROR_FIXED_REPORT.md  PORTFOLIO_500_ERROR_FIX_RAPPORT.md  PORTFOLIO_ISSUES_FIXED_COMPLETE_REPORT.md  PORTFOLIO_PRICE_ALERTS_FIXES_COMPLETE_REPORT.md  PORTFOLIO_ROUTE_FIX_REPORT.md  PROBLEMLØSNING_RAPPORT_29AUG.md  PRODUCTION_SETUP.md  PROFILE_500_ERROR_FIX_RAPPORT.md  PROFILE_ROUTE_FIX_REPORT.md  SQUASH_MIGRATION_PLAN.md  STOCK_DETAILS_PRICE_ALERTS_FIXES_COMPLETE_FINAL_REPORT.md  STRATEGY_API.md  SUBSCRIPTION_URL_FOR_FIX.md  TEST_USER_IMPLEMENTATION_REPORT.md  TEST_USER_LOGIN_FIX.md  (+156 more)
.devcontainer/: devcontainer.json
.quarantine/: README.md
app/: .flake8  .gitignore  __init__.py  admin.py  advanced_orders.py  alerts_system.py  api.py  auth.py  blueprints.py  config.py  constants.py  data_service.py  decorators.py  extensions.py  forms.py  gunicorn.conf.py  news.py  (+9 more)
(+647 files in other folders)
